Avoid the use of "you" in the Basics chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Reviewed by:		carlavilla
Differential Revision:	https://reviews.freebsd.org/D52205

--- a/documentation/content/en/books/handbook/basics/_index.adoc
+++ b/documentation/content/en/books/handbook/basics/_index.adoc
@@ -56,7 +56,7 @@ This chapter covers the basic commands and functionality of the FreeBSD operatin
 Much of this material is relevant for any UNIX(R)-like operating system.
 New FreeBSD users are encouraged to read through this chapter carefully.
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * How to use and configure virtual consoles.
 * How to create and manage users and groups on FreeBSD.
@@ -559,7 +559,7 @@ How to configure NIS is covered in crossref:network-servers[network-servers,Netw
 Any user can easily change their password using man:passwd[1].
 To prevent accidental or unauthorized changes, this command will prompt for the user's original password before a new password can be set:
 
-.Changing Your Password
+.Changing The Password
 [example]
 ====
 [source,shell]
@@ -1257,7 +1257,7 @@ There are some drawbacks to this approach, and one advantage.
 * FreeBSD's file systems are robust if power is lost. However, a power loss at a critical point could still damage the structure of the file system. By splitting data over multiple file systems it is more likely that the system will still come up, making it easier to restore from backup as necessary.
 
 .Benefit of a Single File System
-* File systems are a fixed size. If you create a file system when you install FreeBSD and give it a specific size, you may later discover that you need to make the partition bigger. This is not easily accomplished without backing up, recreating the file system with the new size, and then restoring the backed up data.
+* File systems are a fixed size. When creating a file system during the FreeBSD installation and giving it a specific size, it may be that one wants to make the partition bigger. This is not easily accomplished without backing up, recreating the file system with the new size, and then restoring the backed up data.
 +
 [IMPORTANT]
 ====
@@ -1291,7 +1291,7 @@ These devices are used by file systems that expect to occupy a slice.
 Each GPT or BSD partition can contain only one file system, which means that file systems are often described by either their typical mount point in the file system hierarchy, or the name of the partition they are contained in.
 
 FreeBSD also uses disk space for _swap space_ to provide _virtual memory_.
-This allows your computer to behave as though it has much more memory than it actually does.
+This allows the computer to behave as though it has much more memory than it actually does.
 When FreeBSD runs out of memory, it moves some of the data that is not currently being used to the swap space, and moves it back in (moving something else out) when it needs it.
 This is called _paging_.
 
@@ -1772,7 +1772,7 @@ For example, to change the shell to `bash`:
 % chsh -s /usr/local/bin/bash
 ....
 
-Enter your password at the prompt and press kbd:[Return] to change your shell.
+Enter the password at the prompt and press kbd:[Return] to change the shell.
 Log off and log in again to start using the new shell.
 
 [NOTE]
