Avoid the use of "you" in the disks chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Reviewed by:		carlavilla
Differential Revision:	https://reviews.freebsd.org/D52207

--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -55,7 +55,7 @@ endif::[]
 This chapter covers the use of disks and storage media in FreeBSD.
 This includes SCSI and IDE disks, CD and DVD media, memory-backed disks, and USB storage devices.
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * How to add additional hard disks to a FreeBSD system.
 * How to grow the size of a disk's partition on FreeBSD.
@@ -68,7 +68,7 @@ After reading this chapter, you will know:
 * How to encrypt disks and swap to secure them against attackers.
 * How to configure a highly available storage network.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Know how to crossref:kernelconfig[kernelconfig,configure and install a new FreeBSD kernel].
 
@@ -1487,7 +1487,8 @@ For more details about `mdmfs`, refer to man:mdmfs[8].
 
 FreeBSD offers a feature in conjunction with crossref:config[soft-updates,Soft Updates]: file system snapshots.
 
-UFS snapshots allow a user to create images of specified file systems, and treat them as a file. If you are using the crossref:zfs[,Z file system (ZFS)], refer to crossref:zfs[zfs-zfs-snapshot,"Managing Snapshots"] on how to use snapshots.
+UFS snapshots allow a user to create images of specified file systems, and treat them as a file.
+When using the crossref:zfs[,Z file system (ZFS)], refer to crossref:zfs[zfs-zfs-snapshot,"Managing Snapshots"] on how to use snapshots.
 
 Snapshot files must be created in the file system that the action is performed on, and a user may create no more than 20 snapshots per file system.
 Active snapshots are recorded in the superblock so they are persistent across unmount and remount operations along with system reboots.
@@ -2148,13 +2149,13 @@ The following are the main features of HAST:
 * Can be used in an already deployed environment to add additional redundancy.
 * Together with CARP, Heartbeat, or other tools, it can be used to build a robust and durable storage system.
 
-After reading this section, you will know:
+Read this chapter to learn:
 
 * What HAST is, how it works, and which features it provides.
 * How to set up and use HAST on FreeBSD.
 * How to integrate CARP and man:devd[8] to build a robust storage system.
 
-Before reading this section, you should:
+Before reading this section:
 
 * Understand UNIX(R) and FreeBSD basics (crossref:basics[basics,FreeBSD Basics]).
 * Know how to configure network interfaces and other core FreeBSD subsystems (crossref:config[config-tuning,Configuration and Tuning]).
