Avoid the use of "you" in the network-servers chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Approved by:		carlavilla
Differential Revision:	https://reviews.freebsd.org/D52213

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -96,14 +96,14 @@ Each line of this configuration file represents an application which can be star
 By default, every line starts with a comment (`+#+`), meaning that inetd is not listening for any applications.
 To configure inetd to listen for an application's connections, remove the `+#+` at the beginning of the line for that application.
 
-After saving your edits, configure inetd to start at system boot by editing [.filename]#/etc/rc.conf#:
+After saving the edits, configure inetd to start at system boot by editing [.filename]#/etc/rc.conf#:
 
 [.programlisting]
 ....
 inetd_enable="YES"
 ....
 
-To start inetd now, so that it listens for the service you configured, type:
+To start inetd now, so that it listens for the configured service, type:
 
 [source,shell]
 ....
@@ -1249,7 +1249,7 @@ default:\
 
 In this example, the system is using the DES format for password hashing.
 Other possible values include `blf` for Blowfish, `md5` for MD5, `sha256` and `sha512` for SHA-256 and SHA-512 respectively.
-For more information and the up to date list of what is available on your system, consult the man:crypt[3] manpage.
+For more information and the up to date list of what is available on the system, consult the man:crypt[3] manpage.
 
 If the format on a host needs to be edited to match the one being used in the NIS domain, the login capability database must be rebuilt after saving the change:
 
@@ -2618,7 +2618,7 @@ On FreeBSD, the built-in ntpd can be used to synchronize a system's clock.
 ntpd is configured using man:rc.conf[5] variables and [.filename]#/etc/ntp.conf#, as detailed in the following sections.
 
 ntpd communicates with its network peers using UDP packets.
-Any firewalls between your machine and its NTP peers must be configured to allow UDP packets in and out on port 123.
+Any firewalls between the machine and its NTP peers must be configured to allow UDP packets in and out on port 123.
 
 ==== The [.filename]#/etc/ntp.conf# file
 
@@ -2732,7 +2732,7 @@ The presence of any of the following keywords in [.filename]#ntp.conf# requires 
 * logdir
 * statsdir
 
-To manually configure ntpd to run as user `ntpd` you must:
+To manually configure ntpd to run as user `ntpd`:
 
 * Ensure that the `ntpd` user has access to all the files and directories specified in the configuration.
 * Arrange for the `mac_ntpd` module to be loaded or compiled into the kernel. See man:mac_ntpd[4] for details.
