Avoid the use of "you" in the Preface chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			    Oslo Hackathon 2025
Reviewed by:		    carlavilla
Differential Revision:	    https://reviews.freebsd.org/D52216

--- a/documentation/content/en/books/handbook/preface/_index.adoc
+++ b/documentation/content/en/books/handbook/preface/_index.adoc
@@ -51,8 +51,8 @@ endif::[]
 The FreeBSD newcomer will find that the first section of this book guides the user through the FreeBSD installation process and gently introduces the concepts and conventions that underpin UNIX(R).
 Working through this section requires little more than the desire to explore, and the ability to take on board new concepts as they are introduced.
 
-Once you have traveled this far, the second, far larger, section of the Handbook is a comprehensive reference to all manner of topics of interest to FreeBSD system administrators.
-Some of these chapters may recommend that you do some prior reading, and this is noted in the synopsis at the beginning of each chapter.
+Once reaching this far, the second, far larger, section of the Handbook is a comprehensive reference to all manner of topics of interest to FreeBSD system administrators.
+Some of these chapters may recommend to do some prior reading, and this is noted in the synopsis at the beginning of each chapter.
 
 For a list of additional sources of information, please see crossref:bibliography[bibliography,Bibliography].
 
@@ -157,7 +157,7 @@ _crossref:bsdinstall[bsdinstall,Installing FreeBSD]_::
 Walks a user through the entire installation process of FreeBSD 9._x_ and later using bsdinstall.
 
 _crossref:basics[basics,FreeBSD Basics]_::
-Covers the basic commands and functionality of the FreeBSD operating system. If you are familiar with Linux(R) or another flavor of UNIX(R) then you can probably skip this chapter.
+Covers the basic commands and functionality of the FreeBSD operating system. When familiar with Linux(R) or another flavor of UNIX(R) then this chapter can probably be skipped.
 
 _crossref:ports[ports,Installing Applications: Packages and Ports]_::
 Covers the installation of third-party software with both FreeBSD's innovative "Ports Collection" and standard binary packages.
@@ -172,10 +172,10 @@ _crossref:desktop[desktop,Desktop Applications]_::
 Lists some common desktop applications, such as web browsers and productivity suites, and describes how to install them on FreeBSD.
 
 _crossref:multimedia[multimedia,Multimedia]_::
-Shows how to set up sound and video playback support for your system. Also describes some sample audio and video applications.
+Shows how to set up sound and video playback support for the system. Also describes some sample audio and video applications.
 
 _crossref:kernelconfig[kernelconfig,Configuring the FreeBSD Kernel]_::
-Explains why you might need to configure a new kernel and provides detailed instructions for configuring, building, and installing a custom kernel.
+Explains the need to configure a new kernel and provides detailed instructions for configuring, building, and installing a custom kernel.
 
 _crossref:printing[printing,Printing]_::
 Describes managing printers on FreeBSD, including information about banner pages, printer accounting, and initial setup.
@@ -193,7 +193,7 @@ _crossref:boot[boot,The FreeBSD Booting Process]_::
 Describes the FreeBSD boot process and explains how to control this process with configuration options.
 
 _crossref:security[security,Security]_::
-Describes many different tools available to help keep your FreeBSD system secure, including Kerberos, IPsec and OpenSSH.
+Describes many different tools available to help keep the FreeBSD system secure, including Kerberos, IPsec and OpenSSH.
 
 _crossref:jails[jails,Jails]_::
 Describes the jails framework, and the improvements of jails over the traditional chroot support of FreeBSD.
@@ -238,19 +238,19 @@ _crossref:mail[mail,Electronic Mail]_::
 Explains the different components of an email server and dives into simple configuration topics for the most popular mail server software: sendmail.
 
 _crossref:network-servers[network-servers,Network Servers]_::
-Provides detailed instructions and example configuration files to set up your FreeBSD machine as a network filesystem server, domain name server, network information system server, or time synchronization server.
+Provides detailed instructions and example configuration files to set up the FreeBSD machine as a network filesystem server, domain name server, network information system server, or time synchronization server.
 
 _crossref:firewalls[firewalls,Firewalls]_::
 Explains the philosophy behind software-based firewalls and provides detailed information about the configuration of the different firewalls available for FreeBSD.
 
 _crossref:advanced-networking[advanced-networking,Advanced Networking]_::
-Describes many networking topics, including sharing an Internet connection with other computers on your LAN, advanced routing topics, wireless networking, Bluetooth(R), ATM, IPv6, and much more.
+Describes many networking topics, including sharing an Internet connection with other computers on the LAN, advanced routing topics, wireless networking, Bluetooth(R), ATM, IPv6, and much more.
 
 _crossref:mirrors[mirrors,Obtaining FreeBSD]_::
-Lists different sources for obtaining FreeBSD media on CDROM or DVD as well as different sites on the Internet that allow you to download and install FreeBSD.
+Lists different sources for obtaining FreeBSD media on CDROM or DVD as well as different sites on the Internet that allows to download and install FreeBSD.
 
 _crossref:bibliography[bibliography,Bibliography]_::
-This book touches on many different subjects that may leave you hungry for a more detailed explanation. The bibliography lists many excellent books that are referenced in the text.
+This book touches on many different subjects that may leave readers hungry for a more detailed explanation. The bibliography lists many excellent books that are referenced in the text.
 
 _crossref:eresources[eresources,Resources on the Internet]_::
 Describes the many forums available for FreeBSD users to post questions and engage in technical conversations about FreeBSD.
@@ -303,7 +303,7 @@ C:\> tools\fdimage floppies\kern.flp A:
 ....
 
 Examples starting with # indicate a command that must be invoked as the superuser in FreeBSD.
-You can login as `root` to type the command, or login as your normal account and use man:su[1] to gain superuser privileges.
+Login as `root` to type the command, or login as the normal account and use man:su[1] to gain superuser privileges.
 
 [source,shell]
 ....
@@ -321,7 +321,7 @@ Unless otherwise noted, C-shell syntax is used for setting environment variables
 [[preface-acknowledgements]]
 == Acknowledgments
 
-The book you are holding represents the efforts of many hundreds of people around the world.
+This book represents the efforts of many hundreds of people around the world.
 Whether they sent in fixes for typos, or submitted complete chapters, all the contributions have been useful.
 
 Several companies have supported the development of this document by paying authors to work on it full-time, paying for publication, etc.
