Avoid the use of "you" in the X11 chapter
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Differential Revision:  https://reviews.freebsd.org/D52223

--- a/documentation/content/en/books/handbook/x11/_index.adoc
+++ b/documentation/content/en/books/handbook/x11/_index.adoc
@@ -59,14 +59,14 @@ This chapter describes how to install and configure
 the man:Xorg[1] server, which provides the open source X Window System
 (colloquially X11) used to provide a graphical environment.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Know how to install additional third-party software as described
 in crossref:ports[ports,Installing Applications: Packages and Ports].
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
-* How to select and install drivers for your graphics processor (GPU).
+* How to select and install drivers for the graphics processor (GPU).
 * The various components of the X Window System,
 and how they interoperate.
 * How to install and configure the X.org server.
@@ -75,7 +75,7 @@ and how they interoperate.
 [[x-graphic-card-drivers]]
 == Graphics Drivers
 
-_**abstract**: Identify your GPU, the port providing a driver for it,
+_**abstract**: Identify the GPU, the port providing a driver for it,
 install it, then enable it to run at subsequent boot with man:sysrc[8]._
 
 Before FreeBSD can render a graphical environment,
@@ -403,7 +403,7 @@ Some applications require these additional components to function.
 [[x-config]]
 == X.org Configuration
 
-_**abstract**: If the defaults for your monitor or input devices,
+_**abstract**: If the defaults for the monitor or input devices,
 are not satisfactory,
 crossref:desktop[desktop-synopsis,desktops]
 include GUIs for configuring them, or they can be configured manually._
@@ -701,7 +701,7 @@ library, a cross-platform effort to support all touch, pointing,
 and keyboard devices under a unified library.
 Unless specified otherwise, this is loaded automatically.
 
-Individual device settings for man:libinput[4] can be tuned in your
+Individual device settings for man:libinput[4] can be tuned in the
 crossref:desktop[desktop-synopsis,desktop's] GUI,
 or manually with package:x11/xinput[xinput]
 and package:x11/setxkbmap[setxkbmap].
@@ -716,7 +716,7 @@ Both are described in this subsection.
 ==== Using Atomic Input Configuration
 
 Devices supported by man:libinput[4] can be configured
-with graphical utilities included with your
+with graphical utilities included with the
 crossref:desktop[desktop-synopsis,desktop] of choice,
 or manually and atomically at runtime with package:x11/xinput[]
 and package:x11/setxkbmap[].
@@ -751,9 +751,9 @@ All settings supported by these devices are provided as properties,
 which can be listed and set atomically.
 Pointing devices have many configurable properties, keyboards usually need none.
 
-To customize your keyboard, take a look at man:setxkbmap[1].
+To customize the keyboard, take a look at man:setxkbmap[1].
 
-Once satisfied with your configuration, simply add the lines to your
+Once satisfied with the configuration, simply add the lines to the
 X initialization script such as [.filename]#~/.Xsession# or [.filename]#~/.xinitrc#.
 
 [[x-config-input-file]]
