--- a/website/content/en/status/report-2025-04-2025-06/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/freebsd-foundation.adoc
@@ -83,7 +83,7 @@ link:https://wiki.freebsd.org/SummerOfCode2025Projects[Twelve projects] were acc
 
 ==== Continuous Integration and Workflow Improvement
 
-As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to <<_continuous_integration,improving the Project's continuous integration system and test infrastructure>>.
+As part of our continued support of the FreeBSD Project, the Foundation supports a full-time staff member dedicated to improving the Project's continuous integration system and test infrastructure.
 
 ==== Legal/FreeBSD IP
 
