--- a/website/content/en/status/report-2025-04-2025-06/intro.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/intro.adoc
@@ -9,7 +9,7 @@ Two months is not bad, especially if we consider that FreeBSD communication happ
 
 If you are a late submitter, please take some time to evaluate if there is anything you can do to improve your report submission punctuality.
 The Status Team is always glad to ease the submission process: if there is something we can do for you, just ask.
-If you are a contributor or just a FreeBSD user, please consider contributing, more if you can.
+If you are a contributor or just a FreeBSD user, please consider contributing more, if you can.
 Even working on a single small simple task is useful, it can help to lower the pressure on other developers, for whom it might thus become easier to find the time to document their work.
 
 Have a nice reading!
