--- a/website/content/en/status/report-2025-04-2025-06/lkpi-wireless.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/lkpi-wireless.adoc
@@ -7,7 +7,7 @@ link:https://github.com/FreeBSDFoundation/proj-laptop/issues/58[LinuxKPI wireles
 link:https://github.com/FreeBSDFoundation/proj-laptop/issues/66[MediaTek mt76 PCI driver support] URL:link:https://github.com/FreeBSDFoundation/proj-laptop/issues/66[] +
 link:https://github.com/FreeBSDFoundation/proj-laptop/issues/34[802.11ax support] URL:link:https://github.com/FreeBSDFoundation/proj-laptop/issues/34[] +
 link:https://github.com/FreeBSDFoundation/proj-laptop/issues/79[net80211 updates] URL:link:https://github.com/FreeBSDFoundation/proj-laptop/issues/79[] +
-link:https://bugs.freebsd.org/bugzilla/showdependencytree.cgi?id=277512&hide_resolved=1[Tracked wireless PRs] URL:https://bugs.freebsd.org/bugzilla/showdependencytree.cgi?id=277512&hide_resolved=1[]
+link:https://bugs.freebsd.org/bugzilla/showdependencytree.cgi?id=277512&hide_resolved=1[Tracked wireless PRs] URL:link:https://bugs.freebsd.org/bugzilla/showdependencytree.cgi?id=277512&hide_resolved=1[]
 
 Contact: Bjoern A. Zeeb <bz@FreeBSD.org> +
 Contact: The FreeBSD wireless mailing list <wireless@FreeBSD.org>
