--- a/website/content/en/status/report-2025-04-2025-06/packrat.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/packrat.adoc
@@ -1,4 +1,4 @@
-=== Packrat - NFS client caching on non-volatile storage
+=== Packrat -- NFS client caching on non-volatile storage
 
 Contact: Rick Macklem <rmacklem@freebsd.org>
 
