--- a/website/content/en/status/report-2025-04-2025-06/usb-debugging.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/usb-debugging.adoc
@@ -4,7 +4,7 @@ Contact: Tom Jones <thj@FreeBSD.org>
 
 XHCI USB controllers offer a mode which allows them to be used as a system debugging interface.
 XHCI debug uses a special USB 3 cable with VBUS, D+ and D- disconnected.
-The feature can used to live debug the FreeBSD kernel, enabling investigation of issues which cause the system video console to lock up and there is not an alternative such as a serial console.
+The feature can be used to live debug the FreeBSD kernel, enabling investigation of issues which cause the system video console to lock up and there is not an alternative such as a serial console.
 This can happen when debugging issues with graphics drivers.
 
 mailto:hrs@FreeBSD.org[Hiroki Sato] developed support for the XHCI debug interface and made it available as some in progress git branches.
