Avoid the use of "you" in remaining handbook chapters
Rewrite sentences that contain 'you', which should be avoided according
to the FDP Primer. The resulting sentences are easier to understand and
often shorter. I did not change programlistings and other output as
these are from programs, which need to be changed first (out of scope of
this change).

Event:			Oslo Hackathon 2025
Differential Revision:	https://reviews.freebsd.org/D52235

--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -55,11 +55,11 @@ endif::[]
 One of the important aspects of FreeBSD is proper system configuration.
 This chapter explains much of the FreeBSD configuration process, including some of the parameters which can be set to tune a FreeBSD system.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Understand UNIX(R) and FreeBSD basics (crossref:basics[basics,FreeBSD Basics]).
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * How to use the various configuration files in [.filename]#/etc#.
 * The basics of [.filename]#rc.conf# configuration and [.filename]#/usr/local/etc/rc.d# startup scripts.
