--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -813,7 +813,7 @@ Functionalities included with Qt Creator are:
 
 * code editor with C++, QML and ECMAscript support;
 * rapid code navigation tools;
-* static code checking and style hints as you type;
+* static code checking and style hints when typing;
 * context sensitive help;
 * visual debugger;
 * integrated GUI layout and forms designer.
