--- a/documentation/content/en/books/handbook/filesystems/_index.adoc
+++ b/documentation/content/en/books/handbook/filesystems/_index.adoc
@@ -63,13 +63,13 @@ See crossref:zfs[zfs,The Z File System (ZFS)] for more details.
 In addition to its native file systems, FreeBSD supports a broad range of file systems from other operating systems.
 Support for these file systems varies, some require loading kernel modules, while others need additional userland tools.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Be familiar with UNIX(R) concepts and crossref:basics[basics,FreeBSD basics].
 * Feel comfortable crossref:ports[ports,installing software] in FreeBSD.
 * Have some understanding of crossref:disks[disks,disks], storage devices, and FreeBSD's naming conventions for devices.
 
-After reading this chapter, you will:
+Read this chapter to:
 
 * Understand the differences between native and supported file systems.
 * Know which file systems are supported by FreeBSD and the level of support available.
