--- a/documentation/content/en/books/handbook/linuxemu/_index.adoc
+++ b/documentation/content/en/books/handbook/linuxemu/_index.adoc
@@ -56,11 +56,11 @@ FreeBSD provides *optional* binary compatibility with Linux(R), commonly referre
 It is available for the x86 (both 32 and 64 bit) and AArch64 architectures.
 Some Linux-specific operating system features are not yet supported; this mostly happens with functionality specific to hardware or related to system management, such as cgroups or namespaces.
 
-Before reading this chapter, you should:
+Before reading this chapter:
 
 * Know how to install crossref:ports[ports,additional third-party software].
 
-After reading this chapter, you will know:
+Read this chapter to learn:
 
 * How to enable Linux binary compatibility on a FreeBSD system.
 * How to install additional Linux shared libraries.
