Status/2025Q2/sylve.adoc: Fix

--- a/website/content/en/status/report-2025-04-2025-06/sylve.adoc
+++ b/website/content/en/status/report-2025-04-2025-06/sylve.adoc
@@ -1,4 +1,4 @@
-=== Sylve - A Unified System Management Platform for FreeBSD
+=== Sylve -- A Unified System Management Platform for FreeBSD
 
 Links: +
 link:https://github.com/AlchemillaHQ/Sylve[GitHub] URL: link:https://github.com/AlchemillaHQ/Sylve[] +
